--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.16.6",
     "emailjs-com": "^3.2.0",
     "eslint": "^7.30.0",
+    "firebase": "^8.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
