--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "emailjs-com": "^3.2.0",
     "eslint": "^7.30.0",
     "firebase": "^8.8.0",
+    "jspdf": "^2.3.1",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
